# fracture_sim

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
FractureSim/: CMakeLists.txt  CudaSupport.cu  CudaSupport.h  FractureSim.cpp  FractureSim.h  KDTreeVectorOfVectorsAdaptor.h  helpers.cpp  helpers.h  main.cpp  parameters.h
SurfaceExtraction/: cuda_helpers.cu  cuda_helpers.py  extract_surface.py  gen_tet_table.py  surface_array.h
data/: bullet.off  cube_shallow.off  cube_shallow_full.off  data_plane.mesh
include/: AABB.h  Array2T.h  Arrow.h  BaseObject.cpp  BaseObject.h  Grid2.h  Gui.cpp  Gui.h  MACGrid2.h  ReferencePlane.h  RigidObject.cpp  RigidObject.h  Simulation.h  Simulator.h
